# DynamicWatchExpression

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: example.toml
src/pwt/dynamic_watch_expression/: __init__.py  _temp.py  config.py  constants.py  core.py  entitiy.py  expression.py  log.py  main.py  miwifi.py  plugin.py  utils.py
src/pwt/dynamic_watch_expression/plugins/: echo.py
tests/: test_inspect.py  test_lark.py  test_log.py  test_retry.py
